# Djikstras-C-Implementation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
dat/: input.json
include/: priority_queue.h  utils.h  vector.h
src/: priority_queue.c  utils.c  vector.c
